# OurPaint-Desktop

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  CODING_STANDARD.md  LICENSE  README.md  main.cc  main.cpp
.github/workflows/: allSituations.yml  dev.yml  main.yml  tests.yml
ClientServer/: Client.cpp  Client.h  LocalScanner.h  PortCheckTask.h  Server.cpp  Server.h
GUI/: CastomeConsole.h  EmojiWidget.cpp  EmojiWidget.h  RightClickFilter.h  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
GUI/GUI_cc/Drawing/: ClosesPoint.cc  ClosestPoint.cc  DrawAddirionalInf.cc  DrawAdditionalInf.cc  DrawBackgrond.cc  DrawBackground.cc  DrawFigures.cc  DrawMouse.cc  Modes.cc  QTPainter.cc  Scaling.cc  SelectedRectangle.cc
GUI/GUI_cc/Events/: KeyWorkWindow.cc  MouseEventWorkWindow.cc  SmileRightClickFilter.cc
GUI/GUI_cc/Logger/: GUI_Logger.cc
GUI/GUI_cc/MainFile/: Mainwindow.cc
GUI/GUI_cc/Rendering/: DrawAdditionalInf.cc  DrawBackground.cc  DrawFigures.cc  Modes.cc  QTPainter.cc
GUI/GUI_cc/Settings/: Settings.cc
GUI/GUI_cc/Unnecessary/: DrawMouse.cc  FrameOverlay.cc  SelectedRectangle.cc
GUI/GUI_cc/Widgets/: CastomeConsole.cc  CustomConsole.cc  DRegex.cc  EmojiWidget.cc  LeftMenuBar.cc  ParameterDelegate.cc  ProtectedPrefixLineEdit.cc  Regex.cc  TreeModel.cc  TreeModelLazy.cc  TreeNode.cc
GUI/GUI_cc/Windows/: CustomIpListWindow.cc  CustomWindowError.cc  CustomWindowSuccessful.cc  CustomWindowWarning.cc  Help.cc  InputWindow.cc  SaveDialog.cc
GUI/GUI_cc/client_server/: LocalScanner.cc  PortCheckTask.cc  Server.cc
GUI/GUI_h/Drawing/: ClosesPoint.h  ClosestPoint.h  Colors.h  DrawAdditionalInf.h  DrawBackground.h  DrawFigures.h  DrawMouse.h  Modes.h  QTPainter.h  Scaling.h  SelectedRectangle.h
GUI/GUI_h/Events/: GlobalEventFilter.h  KeyEventCollapsedPanel.h  KeyEventToolPanel.h  KeyTopBar.h  KeyWorkWindow.h  MouseEventWorkWindow.h  SmileRightClickFilter.h
GUI/GUI_h/Logger/: GUI_Logger.h
GUI/GUI_h/MainFile/: Mainwindow.h  ui_help.h  ui_mainwindow.h
GUI/GUI_h/Rendering/: Colors.h  DrawAdditionalInf.h  DrawBackground.h  DrawFigures.h  Modes.h  QTPainter.h
GUI/GUI_h/Settings/: Settings.h
GUI/GUI_h/Unnecessary/: DrawMouse.h  FrameOverlay.h  SelectedRectangle.h
GUI/GUI_h/Widgets/: CustomConsole.h  DRegex.h  EmojiWidget.h  LeftMenuBar.h  ParameterDelegate.h  ProtectedPrefixLineEdit.h  Regex.h  TreeModel.h  TreeModelLazy.h  TreeNode.h
GUI/GUI_h/Windows/: CastomeWindowError.h  CastomeWindowSuccessful.h  CastomeWindowWarning.h  CustomIpListWindow.h  CustomWindowError.h  CustomWindowSuccessful.h  CustomWindowWarning.h  Help.h  InputWindow.h  SaveDialog.h  (+1 more)
GUI/Windows/: CastomeIpListWindow.h  ui_Help.h
Matrix/: Matrix.h
headers/: Application.h  BMPfile.h  Enums.h  ExceptionGuard.h  GeometricObjects.h  GridSnap.h  GridSnapObserver.h  GridSnapQtAdapter.h  ID.h  List.h  Objects.h  Paint.h  Requirements.h  Scaling.h  Scene.h  SceneObserver.h  SceneQtAdapter.h  UndoRedo.h  enums.h  objects.h  paint.h  requirements.h  scaling.h
headers/App/: Application.h
headers/ClientServer/: Client.h  LocalScanner.h  Server.h
headers/GUI/: CastomeConsole.h  ClosesPoint.h  DrawAdditionalInf.h  DrawBackgrond.h  DrawBackground.h  DrawFigures.h  DrawMode.h  DrawMouse.h  EmojiWidget.h  FrameOverlay.h  GlobalEventFilter.h  KeyEventCollapsedPanel.h  KeyWorkWindow.h  Mainwindow.h  OP.pro  RightClickFilter.h  mainwindow.h  ui_mainwindow.h
headers/UndoRedo/: Command.h  CommandFactory.h  ConsoleManager.h  Transaction.h  UndoRedo.h  UndoRedoObserver.h  UndoRedoTemplate.h
headers/app/: Application.h
headers/commands/: CommandAddArc.h  CommandAddCircle.h  CommandAddObject.h  CommandAddPoint.h  CommandAddRequirement.h  CommandDeleteRequirement.h  CommandMove.h
headers/controllers/: LeftMenuController.h  MainWindController.h  PainterController.h
headers/objects/: BoundBox.h  BoundingBox.h  Component.h  Enums.h  GeometricObjects.h  ID.h  Objects.h
headers/painters/: BMPpainter.h  Painter.h  QTPainter.h
headers/saveload/: FileOurP.h  LoadSettingsApplications.h  SaveLoadJson.h  SaveSettingsApplications.h  objectInFile.h  objectInJson.h  requirementInFile.h  requirementInJson.h
painter/: QTPainter.cpp  QTPainter.h  objects.cpp  objects.h  paint.cpp  paint.h
painter/Optimization/: Task.h
painter/saveload/: FileOurP.cpp  LoadSettingsApplications.cpp  LoadSettingsApplications.h  SaveSettingsApplications.cpp  SaveSettingsApplications.h  requirementInFile.cpp
src/: Application.cc  BMPfile.cc  GeometricObjects.cc  GridSnap.cc  GridSnapQtAdapter.cc  ID.cc  Objects.cc  Paint.cc  Requirements.cc  Scaling.cc  Scaling.cpp  Scene.cc  SceneObserver.cc  SceneQtAdapter.cc  paint.cc  paint.cpp  requirements.cpp  scaling.cpp
src/App/: Application.cpp
src/ClientServer/: Client.cpp
src/GUI/: CastomeConsole.cpp  ClosesPoint.cc  DrawAddirionalInf.cc  DrawBackgrond.cc  DrawFigures.cc  DrawMouse.cc  KeyWorkWindow.cc  LeftMenuBar.cc  Mainwindow.cc  Modes.cc  MouseEventWorkWindow.cc  RightClickFilter.cc  mainwindow.cc  mainwindow.cpp
src/UndoRedo/: ConsoleManager.cc  Transaction.cc  Transactions.cc  UndoRedo.cc  UndoRedoTemplate.cc
src/commands/: CommandAddRequirement.cc  CommandDeleteRequirement.cc  CommandMove.cc
src/controllers/: LeftMenuController.cc  MainWindController.cc  PainterController.cc
src/objects/: BoundBox.cc  BoundingBox.cc  Component.cc  GeometricObjects.cc  Objects.cc  Requirements.cc
src/painters/: BMPpainter.cc  QTPainter.cc  QTPainter.cpp
src/saveload/: FileOurP.cc  FileOurP.cpp  SaveLoadJson.cc  SaveSettingsApplications.cc  objectInFile.cc  objectInJson.cc  requirementInFile.cc  requirementInJson.cc
test/: CMakeLists.txt  TestsMatrix.cpp  addReqInComponentTests.cpp  savergtests.cpp  test.cpp
tests/: CMakeLists.txt  ComponentTest.cc  IDGTEST.cc  MoveGTEST.cc  ObjectInJsonGTEST.cc  ObjectsGTEST.cc  RequirementsGTEST.cc  SceneGTEST.cc  UndoRedoGTEST.cc  UndoRedoGTEST.cpp  UndoRedoTests.cc  VarsStorageGTEST.cc  addReqInComponentTests.cc  requirementInJsonGTEST.cc  test.cc
tests/BMPtests/tests/: CMakeLists.txt
tests/testStructures/: homeFINAL2.ourp
(+80 files in other folders)
